Changelog
=========

4.3-dev - (unreleased)
----------------------

4.2 - (2012-03-30)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
  [voineali #4996]
* Feature: Refactoring to be able to use this package as a standalone or as
  part of eea.daviz bundle
  [voineali #4996]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-07)
------------------
* Bugfix: Fixed IE JS errors, fixed code that uses jQuery to avoid conflicts
  with other JS frameworks
  [szabozo0 #4542]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: ported package to plone 4.x
  [ichimdav #4233]

1.0 - (2011-03-16)
------------------
* Initial release
  [voineali]
